--- a/app/src/main/res/layout/fragment_add_edit_task.xml
+++ b/app/src/main/res/layout/fragment_add_edit_task.xml
@@ -2,7 +2,8 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.addedittask.AddEditTaskFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,20 +12,20 @@
         android:padding="8dp">
 
         <EditText
-            android:id="@+id/edittext_task_name"
+            android:id="@+id/edit_text_task_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/add_task_task_hint"
             android:inputType="text" />
 
         <CheckBox
-            android:id="@+id/checkbox_important"
+            android:id="@+id/check_box_important"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Important Task" />
 
         <TextView
-            android:id="@+id/textview_date_created"
+            android:id="@+id/text_view_date_created"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="Date created:" />
