--- a/app/src/main/res/menu/menu_fragment_tasks.xml
+++ b/app/src/main/res/menu/menu_fragment_tasks.xml
@@ -17,11 +17,11 @@
         <menu>
 
             <item
-                android:id="@+id/action_sort_name"
+                android:id="@+id/action_sort_by_name"
                 android:title="Sort by name" />
 
             <item
-                android:id="@+id/action_sort_date_created"
+                android:id="@+id/action_sort_by_date_created"
                 android:title="Sort by date created" />
 
         </menu>
